# timetool

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
tests/: test_basic.py
timetool/: main.py
