[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timetool"
version = "0.10"
description = "Quick timezone and time format conversion CLI tool"
readme = "README.md"
authors = [
    { name = "John Miller", email = "john@johngm.com" },
]
requires-python = ">=3.7.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "pytz",
    "babel",
    "python-dateutil",
    "tzdata",
    "natural>=0.2.0",
]

[dependency-groups]
dev = [
    "black",
    "coverage",
    "flake8",
    "flake8-pyproject",
    "freezegun",
    "hatchling",
    "pytest",
    "sphinx",
]


[project.urls]
Homepage = "https://github.com/personalcomputer/timetool"

[project.scripts]
timetool = "timetool.main:main"

[tool.isort]
line_length = 120
default_section = "THIRDPARTY"  # codespell:ignore
order_by_type = true
profile = "black"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = ["E501", "F403", "W503", "SIM106"]
