[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timetool"
version = "0.12"
description = "Quick timezone and time format conversion CLI tool"
readme = "README.md"
authors = [
    { name = "John Miller", email = "john@johngm.com" },
]
requires-python = ">=3.7.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "pytz",
    "babel",
    "python-dateutil",
    "tzdata",
    "natural>=0.2.0",
]

[dependency-groups]
dev = [
    "black",
    "codespell>=2.2.5",
    "coverage",
    "flake8",
    "flake8-pyproject",
    "freezegun",
    "hatchling",
    "isort>=5.11.5",
    "mypy>=1.4.1",
    "pytest",
    "ruff>=0.11.5",
    "sphinx",
    "types-python-dateutil>=2.8.19.14",
    "types-pytz>=2023.3.1.1",
]

[project.urls]
Homepage = "https://github.com/personalcomputer/timetool"

[project.scripts]
timetool = "timetool.main:main"

[tool.hatch.build]
only-include = [
    "timetool",
]

[tool.isort]
line_length = 120
default_section = "THIRDPARTY"  # codespell:ignore
order_by_type = true
profile = "black"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
ignore = ["E501", "F403", "W503", "SIM106"]

[tool.codespell]
ignore-words-list = "ist"
